# Embedded-ecs-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: controller.hpp  sensor_manager.hpp
qt_dashboard/: mainwindow.cpp  mainwindow.hpp
src/: controller.cpp  main.cpp  sensor_manager.cpp
